module12/practice-istio-ingress-gateway/istio-spec.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
    name: httpsserver
spec:
    gateways:
        - httpsserver-gw
    hosts:
        - httpsserver.cncamp.io
    http:
        - match:
              - port: 443
          route:
              - destination:
                    host: httpserver.httpmesh.svc.cluster.local
                    port:
                        number: 8080
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
    name: httpsserver-gw
spec:
    selector:
        istio: ingressgateway
    servers:
        - hosts:
              - httpsserver.cncamp.io
          port:
              name: https-default
              number: 443
              protocol: HTTPS
          tls:
              mode: SIMPLE
              credentialName: cncamp-tls
